fix fragments spacing issue inside container

--- a/styles/_fragment.scss
+++ b/styles/_fragment.scss
@@ -1,8 +1,8 @@
 .fragment {
   @apply absolute flex items-center justify-center w-full h-full;
   @apply z-20 p-20 overflow-hidden;
-  @apply bg-neutral-900 bg-opacity-70;
-  // animation: slide-in-bottom 0.3s ease-in-out;
+  @apply bg-neutral-900 bg-opacity-75;
+  // animation: slide-in-bottom 0.3s ease-in-out
 
   &__container {
     @apply flex items-center justify-center w-full h-full;
